--- a/web/index.html
+++ b/web/index.html
@@ -42,8 +42,8 @@
     
 
   <!-- Status Bar color in Safari browser (iOS) and PWA -->
-  <meta name="theme-color" media="(prefers-color-scheme: light)" content="#f1f4f8">
-  <meta name="theme-color" media="(prefers-color-scheme: dark)"  content="#1d2428">
+  <meta name="theme-color" media="(prefers-color-scheme: light)" content="#080808">
+  <meta name="theme-color" media="(prefers-color-scheme: dark)"  content="#080808">
 
   <link rel="manifest" href="manifest.json">
   <script>
