--- a/web/index.html
+++ b/web/index.html
@@ -19,7 +19,7 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="Inspire AI: Build your brand">
+  <meta name="apple-mobile-web-app-title" content="    ">
 
   
 
@@ -29,15 +29,15 @@
   <link rel="icon" type="image/png" href="favicon.png" />
 
   <!-- Open Graph & SEO tags -->
-  <meta property="og:title" content="Inspire AI: Build your brand" />
+  <meta property="og:title" content="    " />
   <meta property="og:description" content="Built with FlutterFlow." />
   <meta property="og:image" content="https://storage.googleapis.com/flutterflow-prod-hosting/og_splash_gradient.png" /> 
-  <meta name="twitter:title" content="Inspire AI: Build your brand" />
+  <meta name="twitter:title" content="    " />
   <meta name="twitter:description" content="Built with FlutterFlow." />
   <meta name="twitter:image" content="https://storage.googleapis.com/flutterflow-prod-hosting/og_splash_gradient.png" />
   <meta name="twitter:card" content="summary_large_image" />
 
-  <title> Inspire AI: Build your brand </title>
+  <title>      </title>
   <meta name="description" content="Built with FlutterFlow." />
     
 
